Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,16 @@
     <title>Blog</title>
 </head>
 <body>
-    <p>Jeje hola</p>
+    <div id="container">
+        <div id="post">
+            <h1>
+                Un titulo atractivo e interesante
+            </h1>
+            <p>
+                Y este es un parrrafo inicial que
+                deberia tener mas informacion la verdad
+            </p>
+        </div>
+    </div>
 </body>
 </html>
